// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createComponent run should create expected App component files 1`] = `
"import { IIdentityContextProviderProps, useIdentityContextProviderProps } from '@reactionable/amplify';
import { App as CoreApp, IAppProps } from '@reactionable/core';
import { IUIContextProviderProps, IUseLayoutProps, useUIContextProviderProps } from '@reactionable/ui-bootstrap';
import { FC, lazy } from 'react';
import { useTranslation } from 'react-i18next';
import './App.scss';
import './i18n/i18n';

// Lazy load these components
const HomeComponent = lazy(() => import('./views/home/Home'));

const NotFoundComponent = lazy(() => import('./views/not-found/NotFound'));


const App: FC = () => {
  const { t } = useTranslation();

  // Configure app
  const appConfig: IAppProps<
    IIdentityContextProviderProps,
    IUIContextProviderProps,
    IUseLayoutProps
  > = {
    routes: [],
    HomeComponent,
    NotFoundComponent,
    layout: {
      header: {
        brand: t('Tests'),
      },
      footer: {
        brand: t('Tests'),
      },
    },
    ui: useUIContextProviderProps(),
    identity: useIdentityContextProviderProps(),
  };

  return <CoreApp {...appConfig} />;
};

export default App;"
`;

exports[`createComponent run should create expected App component files 2`] = `
"import { IIdentityContextProviderProps, useIdentityContextProviderProps } from '@reactionable/amplify';
import { TestWrapper } from '@reactionable/ui-bootstrap';
import { render } from '@testing-library/react';
import React from 'react';
import { MemoryRouter } from 'react-router';
import App from './App';

describe('App', () => {
    
    let identity: IIdentityContextProviderProps;

    beforeAll(() => {
        identity = useIdentityContextProviderProps();
    });

    it('renders without crashing', () => {  
        render(
            <TestWrapper identity={identity}>
                <App />
            </TestWrapper>
        );
    });
});"
`;

exports[`createComponent run should create expected components files 1`] = `
"import React, { FC } from 'react';
import { Helmet } from 'react-helmet';
import { useTranslation } from 'react-i18next';

interface ITestComponentProps { }
const TestComponent: FC<ITestComponentProps> = (props) => {
  const { t } = useTranslation();
  
  return <>
    <Helmet>
      <title>{t('Tests')} - {t('Test component')}</title>
      <meta name=\\"description\\" content={t('Test component description')} />
    </Helmet>
    <h1>{t('Test component')}</h1>
    
  </>;
};
export default TestComponent;"
`;

exports[`createComponent run should create expected components files 2`] = `
"import { IIdentityContextProviderProps, useIdentityContextProviderProps } from '@reactionable/amplify';
import { TestWrapper } from '@reactionable/ui-bootstrap';
import { render } from '@testing-library/react';
import React from 'react';
import { MemoryRouter } from 'react-router';
import TestComponent from './TestComponent';

describe('TestComponent', () => {
    
    let identity: IIdentityContextProviderProps;

    beforeAll(() => {
        identity = useIdentityContextProviderProps();
    });

    it('renders without crashing', () => {  
        render(
            <TestWrapper identity={identity}>
                <TestComponent />
            </TestWrapper>
        );
    });
});"
`;
